src/tests/testfiles/ternary-operator/6.txt
testfiles/ternary-operator/6.c:4:6: error: invalid operands to logical 'or' (have 'int' and 'float')
(1 || 2.0 ? c[0] : 0);
 ^
